--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,12 @@
     "name": "hexiros/person-trait",
     "description": "A simple package that adds Person trait to any model.",
     "type": "library",
-    "license": "MIT License",
+    "keywords": [
+        "laravel",
+        "person",
+        "trait"
+    ],
+    "license": "MIT",
     "autoload": {
         "psr-4": {
             "Hexiros\\PersonTrait\\": "src/"
@@ -24,5 +29,11 @@
             "email": "ruel@hexiros.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": "^7.4|^8.0",
+        "illuminate/support": "^8.0|^9.0"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "version": "0.0.1"
 }
