--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "MyPersonPackage\\PersonServiceProvider"
+                "Hexiros\\PersonServiceProvider"
             ],
             "config": [
                 "person.php"
@@ -34,5 +34,5 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "version": "0.0.3"
+    "version": "0.0.4"
 }
