--- a/composer.json
+++ b/composer.json
@@ -13,16 +13,13 @@
             "Hexiros\\PersonTrait\\": "src/"
         },
         "classmap": [
-            "database/migrations"
+            "src/database/migrations"
         ]
     },
     "extra": {
         "laravel": {
             "providers": [
                 "Hexiros\\PersonTrait\\PersonServiceProvider"
-            ],
-            "config": [
-                "person.php"
             ]
         }
     },
@@ -37,5 +34,5 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "version": "0.0.6"
+    "version": "0.0.7"
 }
